Fix special overflow

--- a/style.css
+++ b/style.css
@@ -416,21 +416,3 @@
   margin-top: 652px;
   z-index: 2;
 }
-
-#settings {
-  position: absolute;
-  z-index: 2;
-  top: 20px;
-  right: 20px;
-  background-color: rgba(0, 0, 0, 0);
-  border: none;
-  background-image: url("images/settings/settings_icon.png");
-  background-size: contain;
-  width: 50px;
-  height: 50px;
-}
-
-#home:focus {
-  border: none;
-  outline: none;
-}
